Feat: 사진 첨부한 일기 작성 API 작성완료
- Swagger에서  테스트 불가능, ã, POSTãMAN 이용하기